[workspace]

members = ["packages/y-octo", "packages/y-octo-utils"]
resolver = "2"

[workspace.dependencies]
y-octo = { workspace = true, path = "packages/y-octo" }
y-octo-utils = { workspace = true, path = "packages/y-octo-utils" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.fast-release]
inherits = "release"
codegen-units = 16
lto = false

[profile.profiling]
inherits = "fast-release"
debug = true

# [profile.release.package.y-octo-fuzz]
# debug = 1

[patch.crates-io]
lib0 = { git = "https://github.com/toeverything/y-crdt", rev = "a700f09" }
yrs = { git = "https://github.com/toeverything/y-crdt", rev = "a700f09" }
y-sync = { git = "https://github.com/toeverything/y-sync", rev = "aeb0010" }
