[package]
authors    = ["DarkSky <darksky2048@gmail.com>"]
edition    = "2021"
license    = "MIT"
name       = "y-octo-node"
repository = "https://github.com/toeverything/y-octo"
version    = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow      = "1"
napi        = { version = "2", features = ["anyhow", "napi4"] }
napi-derive = "2"
y-octo      = { path = "../y-octo" }

[build-dependencies]
napi-build = "2"
