[package]
authors = ["x1a0t <405028157@qq.com>", "DarkSky <darksky2048@gmail.com>"]
edition = "2021"
license = "MIT"
name    = "y-octo-utils"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["merger"]
bench  = ["regex"]
fuzz   = ["arbitrary", "phf", "y-octo", "yrs"]
merger = ["clap", "y-octo", "y-octo/large_refs"]

[dependencies]
arbitrary = { version = "1.3", features = ["derive"], optional = true }
clap      = { version = "4.4", features = ["derive"], optional = true }
phf       = { version = "0.11", features = ["macros"], optional = true }
regex     = { version = "1.5", optional = true }
y-octo    = { workspace = true, optional = true }
yrs       = { version = "=0.16.5", optional = true }

[[bin]]
name = "bench_result_render"
path = "bin/bench_result_render.rs"

[[bin]]
name = "doc_merger"
path = "bin/doc_merger.rs"
